--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,15 +7,27 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  dio: ^5.2.0+1
+  cloud_firestore: ^4.8.1
+  cupertino_icons: ^1.0.5
   flutter:
     sdk: flutter
-  flutter_dotenv: ^5.1.0
-  formz: ^0.6.0
-  go_router: ^7.1.1
-  google_fonts: ^5.0.0
+  # flutter_geocoder: ^0.2.2-nullsafety
+  flutter_local_notifications: ^14.1.1
+  flutter_polyline_points: ^1.0.0
+  flutter_spinkit: ^5.2.0
+  flutter_svg: ^2.0.7
+  geocoding: ^2.1.0
+  geolocator: ^9.0.2
+  get_it: ^7.6.0
+  go_router: ^8.0.5
+  google: ^0.0.1
+  google_maps_flutter: ^2.0.0-nullsafety.1
+  google_maps_webservice: ^0.0.19
+  http: ^0.13.6
+  # location: ^4.4.0
+  maps_launcher: ^2.2.0
   provider: ^6.0.5
-  riverpod: ^2.3.6
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
@@ -24,3 +36,10 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+
+  assets:
+    - assets/
+    - assets/icons/
+    - .env
+    - assets/loaders/
+    - assets/images/
